# avTools

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  build.sh  chunkGen.py  push.sh
.github/workflows/: build.yml
DocumentationParser/: DocParser.py  FileParser.py  FileParserTests.py  FileWriter.py
Misc/: cfgConverter.py  chunkGen.py
assetPipeline/: assetTool.py  directoryScanner.py  directoryTimestampFile.py  exportManager.py  resourceMetaBase.py  resourceMetaBaseTests.py  resourceMetaFile.py  resourceMetaFileTests.py  settings.py
assetPipeline/assetModules/: AssetModule.py  AssetModuleBlend.py  AssetModuleCopy.py  AssetModuleSVG.py  AssetModuleXCF.py
assetPipelineContainer/: Dockerfile  build.sh  entrypoint.sh  exportScene.sh  installAddon.py  start.sh
blenderAddon/: addon.py
blenderExporter/: exportScene.py  exportTest.py
meshViewer/: meshViewer.py
meshViewer/squirrel/: animationGui.nut  main.nut  meshGui.nut  meshView.nut
particleViewer/: SquirrelEntry.nut  avSetup.cfg
squirrelProfiling/: CMakeLists.txt
squirrelProfiling/src/: Main.cpp
squirrelProfiling/src/SquirrelFramework/: SquirrelFramework.cpp  SquirrelFramework.h  Timer.cpp  Timer.h
squirrelProfiling/src/Vec3Profile/: Vec3Array.cpp  Vec3Array.h  Vec3Class.cpp  Vec3Class.h  Vec3UserData.cpp  Vec3UserData.h
substanceAddon/: Ogre.spexp  addon.py  installPresets.sh
testRunner/: ConfigClass.py  JUnitFileWriter.py  TestCaseExecution.py  TestPlanExecution.py  TestProjectEntry.py  testRunner.py
